# A2_MCDA_5511

./: A2.ipynb  Final_Automation.py  README.md  Task 3 & 4.ipynb  changes.txt  llm.py  pyproject.toml  q-a-llm.py  qa_pairs_results - labeled.csv  qa_pairs_results.csv  qa_pairs_results_test.csv
.ipynb_checkpoints/: Task 3 & 4-checkpoint.ipynb
