[project]
name = "a2-mcda-5511"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
        "debugpy>=1.8.12",
        "psutil>=7.0.0",
        "pywin32>=308",
        "pyzmq>=26.2.1",
        "tornado>=6.4.2",
        "ipykernel>=6.29.5",
        "ipywidgets>=8.1.5",
        "jupyter>=1.1.1",
        "pandas>=2.2.3",
        "sentence-transformers>=3.4.1",
]
